--- a/data/processing.ipynb
+++ b/data/processing.ipynb
@@ -166,16 +166,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1;Narrators;0\n",
-      "2;Parenting;1\n",
-      "3;Work;1\n",
-      "4;Dinner;0\n",
-      "5;Bars;0\n",
-      "6;Barbie;0\n",
-      "7;Music;0\n",
-      "8;Lottery;0\n",
-      "9;Dating;1\n",
-      "10;Gentlemen;0\n"
+      "1;documentary;0\n",
+      "2;parenting;1\n",
+      "3;work;1\n",
+      "4;dinner;0\n",
+      "5;bar;0\n",
+      "6;Barbie;1\n",
+      "7;music;0\n",
+      "8;lottery;0\n",
+      "9;dating;1\n",
+      "10;gentleman;1\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing group 13 from joke 48750 to joke 52499:\n",
+      "Processing group 16 from joke 60000 to joke 63749:\n",
       "Processed batch 1 / 250\n",
       "Processed batch 2 / 250\n",
       "Processed batch 3 / 250\n",
@@ -515,9 +515,9 @@
       "Processed batch 248 / 250\n",
       "Processed batch 249 / 250\n",
       "Processed batch 250 / 250\n",
-      "Finished processing group 13\n",
+      "Finished processing group 16\n",
       "\n",
-      "Processing group 14 from joke 52500 to joke 56249:\n",
+      "Processing group 17 from joke 63750 to joke 67499:\n",
       "Processed batch 1 / 250\n",
       "Processed batch 2 / 250\n",
       "Processed batch 3 / 250\n",
@@ -768,266 +768,13 @@
       "Processed batch 248 / 250\n",
       "Processed batch 249 / 250\n",
       "Processed batch 250 / 250\n",
-      "Finished processing group 14\n",
-      "\n",
-      "Processing group 15 from joke 56250 to joke 59999:\n",
-      "Processed batch 1 / 250\n",
-      "Processed batch 2 / 250\n",
-      "Processed batch 3 / 250\n",
-      "Processed batch 4 / 250\n",
-      "Processed batch 5 / 250\n",
-      "Processed batch 6 / 250\n",
-      "Processed batch 7 / 250\n",
-      "Processed batch 8 / 250\n",
-      "Processed batch 9 / 250\n",
-      "Processed batch 10 / 250\n",
-      "Processed batch 11 / 250\n",
-      "Processed batch 12 / 250\n",
-      "Processed batch 13 / 250\n",
-      "Processed batch 14 / 250\n",
-      "Processed batch 15 / 250\n",
-      "Processed batch 16 / 250\n",
-      "Processed batch 17 / 250\n",
-      "Processed batch 18 / 250\n",
-      "Processed batch 19 / 250\n",
-      "Processed batch 20 / 250\n",
-      "Processed batch 21 / 250\n",
-      "Processed batch 22 / 250\n",
-      "Processed batch 23 / 250\n",
-      "Processed batch 24 / 250\n",
-      "Processed batch 25 / 250\n",
-      "Processed batch 26 / 250\n",
-      "Processed batch 27 / 250\n",
-      "Processed batch 28 / 250\n",
-      "Processed batch 29 / 250\n",
-      "Processed batch 30 / 250\n",
-      "Processed batch 31 / 250\n",
-      "Processed batch 32 / 250\n",
-      "Processed batch 33 / 250\n",
-      "Processed batch 34 / 250\n",
-      "Processed batch 35 / 250\n",
-      "Processed batch 36 / 250\n",
-      "Processed batch 37 / 250\n",
-      "Processed batch 38 / 250\n",
-      "Processed batch 39 / 250\n",
-      "Processed batch 40 / 250\n",
-      "Processed batch 41 / 250\n",
-      "Processed batch 42 / 250\n",
-      "Processed batch 43 / 250\n",
-      "Processed batch 44 / 250\n",
-      "Processed batch 45 / 250\n",
-      "Processed batch 46 / 250\n",
-      "Processed batch 47 / 250\n",
-      "Processed batch 48 / 250\n",
-      "Processed batch 49 / 250\n",
-      "Processed batch 50 / 250\n",
-      "Processed batch 51 / 250\n",
-      "Processed batch 52 / 250\n",
-      "Processed batch 53 / 250\n",
-      "Processed batch 54 / 250\n",
-      "Processed batch 55 / 250\n",
-      "Processed batch 56 / 250\n",
-      "Processed batch 57 / 250\n",
-      "Processed batch 58 / 250\n",
-      "Processed batch 59 / 250\n",
-      "Processed batch 60 / 250\n",
-      "Processed batch 61 / 250\n",
-      "Processed batch 62 / 250\n",
-      "Processed batch 63 / 250\n",
-      "Processed batch 64 / 250\n",
-      "Processed batch 65 / 250\n",
-      "Processed batch 66 / 250\n",
-      "Processed batch 67 / 250\n",
-      "Processed batch 68 / 250\n",
-      "Processed batch 69 / 250\n",
-      "Processed batch 70 / 250\n",
-      "Processed batch 71 / 250\n",
-      "Processed batch 72 / 250\n",
-      "Processed batch 73 / 250\n",
-      "Processed batch 74 / 250\n",
-      "Processed batch 75 / 250\n",
-      "Processed batch 76 / 250\n",
-      "Processed batch 77 / 250\n",
-      "Processed batch 78 / 250\n",
-      "Processed batch 79 / 250\n",
-      "Processed batch 80 / 250\n",
-      "Processed batch 81 / 250\n",
-      "Processed batch 82 / 250\n",
-      "Processed batch 83 / 250\n",
-      "Processed batch 84 / 250\n",
-      "Processed batch 85 / 250\n",
-      "Processed batch 86 / 250\n",
-      "Processed batch 87 / 250\n",
-      "Processed batch 88 / 250\n",
-      "Processed batch 89 / 250\n",
-      "Processed batch 90 / 250\n",
-      "Processed batch 91 / 250\n",
-      "Processed batch 92 / 250\n",
-      "Processed batch 93 / 250\n",
-      "Processed batch 94 / 250\n",
-      "Processed batch 95 / 250\n",
-      "Processed batch 96 / 250\n",
-      "Processed batch 97 / 250\n",
-      "Processed batch 98 / 250\n",
-      "Processed batch 99 / 250\n",
-      "Processed batch 100 / 250\n",
-      "Processed batch 101 / 250\n",
-      "Processed batch 102 / 250\n",
-      "Processed batch 103 / 250\n",
-      "Processed batch 104 / 250\n",
-      "Processed batch 105 / 250\n",
-      "Processed batch 106 / 250\n",
-      "Processed batch 107 / 250\n",
-      "Processed batch 108 / 250\n",
-      "Processed batch 109 / 250\n",
-      "Processed batch 110 / 250\n",
-      "Processed batch 111 / 250\n",
-      "Processed batch 112 / 250\n",
-      "Processed batch 113 / 250\n",
-      "Processed batch 114 / 250\n",
-      "Processed batch 115 / 250\n",
-      "Processed batch 116 / 250\n",
-      "Processed batch 117 / 250\n",
-      "Processed batch 118 / 250\n",
-      "Processed batch 119 / 250\n",
-      "Processed batch 120 / 250\n",
-      "Processed batch 121 / 250\n",
-      "Processed batch 122 / 250\n",
-      "Processed batch 123 / 250\n",
-      "Processed batch 124 / 250\n",
-      "Processed batch 125 / 250\n",
-      "Processed batch 126 / 250\n",
-      "Processed batch 127 / 250\n",
-      "Processed batch 128 / 250\n",
-      "Processed batch 129 / 250\n",
-      "Processed batch 130 / 250\n",
-      "Processed batch 131 / 250\n",
-      "Processed batch 132 / 250\n",
-      "Processed batch 133 / 250\n",
-      "Processed batch 134 / 250\n",
-      "Processed batch 135 / 250\n",
-      "Processed batch 136 / 250\n",
-      "Processed batch 137 / 250\n",
-      "Processed batch 138 / 250\n",
-      "Processed batch 139 / 250\n",
-      "Processed batch 140 / 250\n",
-      "Processed batch 141 / 250\n",
-      "Processed batch 142 / 250\n",
-      "Processed batch 143 / 250\n",
-      "Processed batch 144 / 250\n",
-      "Processed batch 145 / 250\n",
-      "Processed batch 146 / 250\n",
-      "Processed batch 147 / 250\n",
-      "Processed batch 148 / 250\n",
-      "Processed batch 149 / 250\n",
-      "Processed batch 150 / 250\n",
-      "Processed batch 151 / 250\n",
-      "Processed batch 152 / 250\n",
-      "Processed batch 153 / 250\n",
-      "Processed batch 154 / 250\n",
-      "Processed batch 155 / 250\n",
-      "Processed batch 156 / 250\n",
-      "Processed batch 157 / 250\n",
-      "Processed batch 158 / 250\n",
-      "Processed batch 159 / 250\n",
-      "Processed batch 160 / 250\n",
-      "Processed batch 161 / 250\n",
-      "Processed batch 162 / 250\n",
-      "Processed batch 163 / 250\n",
-      "Processed batch 164 / 250\n",
-      "Processed batch 165 / 250\n",
-      "Processed batch 166 / 250\n",
-      "Processed batch 167 / 250\n",
-      "Processed batch 168 / 250\n",
-      "Processed batch 169 / 250\n",
-      "Processed batch 170 / 250\n",
-      "Processed batch 171 / 250\n",
-      "Processed batch 172 / 250\n",
-      "Processed batch 173 / 250\n",
-      "Processed batch 174 / 250\n",
-      "Processed batch 175 / 250\n",
-      "Processed batch 176 / 250\n",
-      "Processed batch 177 / 250\n",
-      "Processed batch 178 / 250\n",
-      "Processed batch 179 / 250\n",
-      "Processed batch 180 / 250\n",
-      "Processed batch 181 / 250\n",
-      "Processed batch 182 / 250\n",
-      "Processed batch 183 / 250\n",
-      "Processed batch 184 / 250\n",
-      "Processed batch 185 / 250\n",
-      "Processed batch 186 / 250\n",
-      "Processed batch 187 / 250\n",
-      "Processed batch 188 / 250\n",
-      "Processed batch 189 / 250\n",
-      "Processed batch 190 / 250\n",
-      "Processed batch 191 / 250\n",
-      "Processed batch 192 / 250\n",
-      "Processed batch 193 / 250\n",
-      "Processed batch 194 / 250\n",
-      "Processed batch 195 / 250\n",
-      "Processed batch 196 / 250\n",
-      "Processed batch 197 / 250\n",
-      "Processed batch 198 / 250\n",
-      "Processed batch 199 / 250\n",
-      "Processed batch 200 / 250\n",
-      "Processed batch 201 / 250\n",
-      "Processed batch 202 / 250\n",
-      "Processed batch 203 / 250\n",
-      "Processed batch 204 / 250\n",
-      "Processed batch 205 / 250\n",
-      "Processed batch 206 / 250\n",
-      "Processed batch 207 / 250\n",
-      "Processed batch 208 / 250\n",
-      "Processed batch 209 / 250\n",
-      "Processed batch 210 / 250\n",
-      "Processed batch 211 / 250\n",
-      "Processed batch 212 / 250\n",
-      "Processed batch 213 / 250\n",
-      "Processed batch 214 / 250\n",
-      "Processed batch 215 / 250\n",
-      "Processed batch 216 / 250\n",
-      "Processed batch 217 / 250\n",
-      "Processed batch 218 / 250\n",
-      "Processed batch 219 / 250\n",
-      "Processed batch 220 / 250\n",
-      "Processed batch 221 / 250\n",
-      "Processed batch 222 / 250\n",
-      "Processed batch 223 / 250\n",
-      "Processed batch 224 / 250\n",
-      "Processed batch 225 / 250\n",
-      "Processed batch 226 / 250\n",
-      "Processed batch 227 / 250\n",
-      "Processed batch 228 / 250\n",
-      "Processed batch 229 / 250\n",
-      "Processed batch 230 / 250\n",
-      "Processed batch 231 / 250\n",
-      "Processed batch 232 / 250\n",
-      "Processed batch 233 / 250\n",
-      "Processed batch 234 / 250\n",
-      "Processed batch 235 / 250\n",
-      "Processed batch 236 / 250\n",
-      "Processed batch 237 / 250\n",
-      "Processed batch 238 / 250\n",
-      "Processed batch 239 / 250\n",
-      "Processed batch 240 / 250\n",
-      "Processed batch 241 / 250\n",
-      "Processed batch 242 / 250\n",
-      "Processed batch 243 / 250\n",
-      "Processed batch 244 / 250\n",
-      "Processed batch 245 / 250\n",
-      "Processed batch 246 / 250\n",
-      "Processed batch 247 / 250\n",
-      "Processed batch 248 / 250\n",
-      "Processed batch 249 / 250\n",
-      "Processed batch 250 / 250\n",
-      "Finished processing group 15\n",
+      "Finished processing group 17\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "target_groups = range(13, 16) # for out-of-order processing\n",
+    "target_groups = range(16, 18) # for out-of-order processing\n",
     "\n",
     "output_folder = 'processed'\n",
     "if not os.path.exists(output_folder):\n",
@@ -1083,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
